Changed bullet symbol and size, fixed heading alignment

--- a/src/index.css
+++ b/src/index.css
@@ -36,12 +36,12 @@ And negate them twice from pdf initial width and height*/
 
   h1,
   h2,
-  h3 {
+  h3,
+  h4,
+  h5 {
     @apply text-theme;
   }
 
-  h4,
-  h5,
   h6 {
     @apply text-accent;
   }
