--- a/src/templates/Template1.css
+++ b/src/templates/Template1.css
@@ -12,7 +12,7 @@
   }
 
   #heading {
-    @apply flex flex-wrap justify-between gap-4;
+    @apply flex flex-wrap items-start justify-between gap-4;
   }
 
   #photo {
@@ -44,7 +44,6 @@
   }
 
   #skills > .row {
-    /* grid-template-columns: repeat(auto-fit, minmax(max-content, 0)); */
     @apply -mx-4 flex flex-wrap divide-x divide-accent border-accent;
   }
 
@@ -81,18 +80,10 @@
   #experiences .date {
     @apply text-end;
   }
-  #experiences :where(.responsibilities, .soft-skills) {
-  }
-  /* #experiences .soft-skills {
-    @apply flex flex-wrap gap-x-2;
-  }
-  #experiences .soft-skills > * {
-    @apply w-1/4 grow;
-  } */
 }
 
 @layer utilities {
   .bullet-list > * {
-    @apply flex items-center gap-1 before:leading-3 before:content-["•"];
+    @apply flex items-center gap-1 before:text-xs before:leading-3 before:text-theme before:content-["◆"];
   }
 }
